Added install scripts for sam deployment of api and initial tests of manually generated mcp gateway for api
